# test-we-travel-together-api

./: .gitignore  README.md  poetry.toml  pyproject.toml
app/: database.py  main.py
app/core/: config.py  security.py
app/models/: __init__.py  profile_model.py  province_model.py  province_target_model.py  registration_model.py  tax_reduction_model.py  user_model.py
app/routers/v1/: __init__.py  authentication_router.py  profile_router.py  province_router.py  province_target_router.py  registration_router.py  tax_reduction_router.py  user_router.py
app/schemas/: authentication_schema.py  profile_schema.py  province_schema.py  province_target_schema.py  registration_schema.py  tax_reduction_schema.py  user_schema.py
scripts/: run-api-dev.bat
tests/: conftest.py  test_authentication.py  test_province_targets.py  test_provinces.py  test_users.py
