[project]
name = "test-we-travel-together-api"
version = "0.1.0"
description = ""
authors = [
    {name = "ซารีฟ มะสาแม็ง",email = "sareef.masamaeng@gmail.com"}
]
readme = "README.md"
requires-python = "3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
